# mcpguard

./: .gitignore  .mypy.ini  .ruff.toml  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: attack_prompts.txt  guarded_server.py  minimal_server.py  policy.yaml
mcpguard/: __init__.py  acl.py  attestation.py  audit.py  auth.py  exceptions.py  guard.py  heuristics.py  policy.py  proxy.py  rate_limit.py  types.py
tests/: test_acl.py  test_guard_integration.py  test_heuristics.py  test_policy.py  test_rate_limit.py
